# Vapas-Worker

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .snyk  .travis.yml  =4.0.0  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  Rocket.toml  SECURITY.md  appveyor.yml  askama.toml  diesel.toml  index.js  package.json
.github/workflows/: greetings.yml  stale.yml
documentation/: MongoDB.md  README.md  auth0.md  env.md  sentry.md  stripe.md
migrations/2020-04-17-221045_package_info/: down.sql  up.sql
migrations/2020-04-17-224945_vapas_release/: down.sql  up.sql
migrations/2020-04-17-224952_vapas_featured/: up.sql
migrations/2020-06-12-140918_vapas_payment_info/: down.sql  up.sql
migrations/2020-06-25-092417_vapas_users/: down.sql  up.sql
modules/: database.js  keys.js  logging.js  passport.js
modules/coreInfo/: index.js
routes/auth/: index.js
routes/coreInfo/: index.js
routes/cyida/: index.js
routes/depictions/: index.js
routes/download/: index.js
routes/paymentHandler/: index.js
routes/stripe/: index.js
src/: main.rs
src/modules/: core_info.rs  depictions.rs  mod.rs  payment_handling.rs
src/services/: RocketSentry.rs  database.rs  mod.rs  rocket_sentry.rs
src/structs/: core_info.rs  depictions.rs  general.rs  mod.rs  models.rs  payment_handling.rs  schema.rs
webDepictions/: index.html
