[package]
name = "vapas_worker"
version = "0.1.0"
authors = ["Skye Viau <skye.viau@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

homepage = "https://www.vapas.gq"
repository = "https://github.com/VapasRepo/Vapas-Worker/tree/rustwrite"
documentation = "https://github.com/VapasRepo/Vapas-Worker/tree/rustwrite/documentation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = "0.4.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rocket-sentry = "0.1.0"
sentry = "0.17.0"
mongodb = "0.9.1"
bson = "0.14.0"