[package]
name = "vapas_worker"
version = "0.1.0"
authors = ["Skye Viau <skye.viau@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

homepage = "https://www.vapas.gq"
repository = "https://github.com/VapasRepo/Vapas-Worker/tree/rustwrite"
documentation = "https://confluence.vapas.gq/display/WORKDOC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-alpha.3"
actix-rt = "1.1.1"
actix-files = "0.3.0-alpha.1"
dotenv = "^0.15.0"
dotenv_codegen = "^0.15.0"
sentry = "^0.17.0"
bson = "^0.14.0"
rustc-serialize = "^0.3.24"
serde_json = "1.0"
serde_derive = "1.0.106"
serde = "1.0.106"
flate2 = "1.0.14"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"]}
chrono = "0.4"
parking_lot = "0.10.2"